--- a/arch/arm/configs/tegra_postmarketos_defconfig
+++ b/arch/arm/configs/tegra_postmarketos_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 4.18.0-rc1 Kernel Configuration
+# Linux/arm 4.18.0 Kernel Configuration
 #
 
 #
@@ -261,7 +261,6 @@ CONFIG_REFCOUNT_FULL=y
 #
 # CONFIG_GCOV_KERNEL is not set
 CONFIG_ARCH_HAS_GCOV_PROFILE_ALL=y
-CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
@@ -3356,6 +3355,7 @@ CONFIG_SND_SOC_WM8903=y
 # CONFIG_SND_SOC_WM8978 is not set
 # CONFIG_SND_SOC_WM8985 is not set
 CONFIG_SND_SOC_WM8994=y
+# CONFIG_SND_SOC_WM8994_P4 is not set
 CONFIG_SND_SOC_WM9712=y
 # CONFIG_SND_SOC_ZX_AUD96P22 is not set
 # CONFIG_SND_SOC_MAX9759 is not set
@@ -3662,7 +3662,7 @@ CONFIG_USB_CONFIGFS_F_MIDI=y
 # CONFIG_USB_CONFIGFS_F_PRINTER is not set
 # CONFIG_TYPEC is not set
 # CONFIG_USB_LED_TRIG is not set
-# CONFIG_USB_ULPI_BUS is not set
+CONFIG_USB_ULPI_BUS=y
 # CONFIG_UWB is not set
 CONFIG_MMC=y
 CONFIG_PWRSEQ_EMMC=y
@@ -4538,7 +4538,10 @@ CONFIG_GENERIC_PHY=y
 # CONFIG_PHY_PXA_28NM_USB2 is not set
 # CONFIG_PHY_CPCAP_USB is not set
 # CONFIG_PHY_MAPPHONE_MDM6600 is not set
+# CONFIG_PHY_QCOM_USB_HS is not set
+# CONFIG_PHY_QCOM_USB_HSIC is not set
 CONFIG_PHY_TEGRA_XUSB=y
+# CONFIG_PHY_TUSB1210 is not set
 # CONFIG_POWERCAP is not set
 # CONFIG_MCB is not set
 
@@ -5281,8 +5284,9 @@ CONFIG_ASSOCIATIVE_ARRAY=y
 CONFIG_HAS_IOMEM=y
 CONFIG_HAS_IOPORT_MAP=y
 CONFIG_HAS_DMA=y
-CONFIG_SGL_ALLOC=y
 CONFIG_NEED_DMA_MAP_STATE=y
+CONFIG_HAVE_GENERIC_DMA_COHERENT=y
+CONFIG_SGL_ALLOC=y
 CONFIG_CPU_RMAP=y
 CONFIG_DQL=y
 CONFIG_GLOB=y
