--- a/drivers/gpu/drm/tegra/Makefile
+++ b/drivers/gpu/drm/tegra/Makefile
@@ -1,4 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0
+ccflags-y := -Idrivers/gpu/drm/tegra
+ccflags-y += -Idrivers/gpu/drm/tegra/uapi
+ccflags-y += -Idrivers/gpu/host1x/soc/hw
 ccflags-$(CONFIG_DRM_TEGRA_DEBUG) += -DDEBUG
 
 tegra-drm-y := \
@@ -19,8 +22,16 @@ tegra-drm-y := \
 	gr2d.o \
 	gr3d.o \
 	falcon.o \
-	vic.o
-
-tegra-drm-y += trace.o
+	vic.o \
+	trace.o \
+	channel.o \
+	client.o \
+	uapi/debug.o \
+	uapi/gart.o \
+	uapi/job_v1.o \
+	uapi/job_v2.o \
+	uapi/patching.o \
+	uapi/scheduler.o \
+	uapi/uapi.o
 
 obj-$(CONFIG_DRM_TEGRA) += tegra-drm.o
