DT: Set sequential power off bit

--- a/arch/arm/boot/dts/tegra30-ouya.dts
+++ b/arch/arm/boot/dts/tegra30-ouya.dts
@@ -416,12 +416,12 @@
 		nvidia,sys-clock-req-active-high;
 		nvidia,lp0-vec = <0xbddf9000 8192>;
 
-		/* Set DEV_OFF bit in DCDC control register of TPS65911 PMIC */
+		/* Set DEV_OFF and PWR_OFF bit in DCDC control register of TPS65911 PMIC */
 		i2c-thermtrip {
 			nvidia,i2c-controller-id = <4>;
 			nvidia,bus-addr = <0x2d>;
 			nvidia,reg-addr = <0x3f>;
-			nvidia,reg-data = <0x1>;
+			nvidia,reg-data = <0x81>;
 		};
 	};
 
