--- a/arch/arm/boot/dts/tegra30-ouya-pinmux.dtsi
+++ b/arch/arm/boot/dts/tegra30-ouya-pinmux.dtsi
@@ -1574,6 +1574,24 @@
 			};
 		};
 
+		dap2 {
+			nvidia,pins = "drive_dap2", "drive_dap1", "drive_dbg", "drive_at5",
+						"drive_gme", "drive_ddc", "drive_ao1", "drive_uart3";
+			nvidia,pull-down-strength = <31>;
+			nvidia,pull-up-strength = <31>;
+			nvidia,slew-rate-rising = <TEGRA_PIN_SLEW_RATE_FASTEST>;
+			nvidia,slew-rate-falling = <TEGRA_PIN_SLEW_RATE_FASTEST>;
+			nvidia,schmitt;
+		};
+
+		sdio1 {
+			nvidia,pins = "drive_sdio1", "drive_sdio3";
+			nvidia,pull-down-strength = <46>;
+			nvidia,pull-up-strength = <42>;
+			nvidia,slew-rate-rising = <TEGRA_PIN_SLEW_RATE_FAST>;
+			nvidia,slew-rate-falling = <TEGRA_PIN_SLEW_RATE_FAST>;
+		};
+
 		sdio4 {
 			nvidia,pins = "drive_gma", "drive_gmb", "drive_gmc", "drive_gmd";
 			nvidia,pull-down-strength = <9>;
