Revert "DT: WIP test lpX"
This reverts commit d5d0a618db8cc015a6eb439fc813173f38d48c73.

--- a/arch/arm/boot/dts/tegra30-ouya.dts
+++ b/arch/arm/boot/dts/tegra30-ouya.dts
@@ -120,10 +120,6 @@
 		};
 	};
 
-	dc@54240000 {
-		status = "disabled";
-	};
-
 	gpio: gpio@6000d000 {
 		/* regulator initialization handles these */
 		/*
@@ -431,7 +427,7 @@
 	};
 
 	sdhci@78000400 {
-		status = "disabled";
+		status = "okay";
 		power-gpios = <&gpio TEGRA_GPIO(D, 4) GPIO_ACTIVE_HIGH>;
 		bus-width = <4>;
 		max-frequency = <52000000>;
