DT: cap mmc highspeed for emmc
does it do anything?

--- a/arch/arm/boot/dts/tegra30-ouya.dts
+++ b/arch/arm/boot/dts/tegra30-ouya.dts
@@ -472,6 +472,7 @@
 		max-frequency = <52000000>;
 
 		keep-power-in-suspend;
+		cap-mmc-highspeed;
 		/* mmc-ddr-1_8v; */
 		mmc-hs200-1_8v;
 		non-removable;
