--- a/arch/arm/boot/dts/tegra30-ouya.dts
+++ b/arch/arm/boot/dts/tegra30-ouya.dts
@@ -36,6 +36,12 @@
 		};
 	};
 
+	cpu0_opp_table: opp_table0 {
+		opp@1160000000_975 {
+			opp-suspend;
+		};
+	};
+
 	fan: gpio_fan {
 		compatible = "gpio-fan";
 		gpios = <&gpio TEGRA_GPIO(J, 2) GPIO_ACTIVE_HIGH>;
